[package]
name = "adif"
version = "0.1.3"
authors = ["Evan Pratten <ewpratten@gmail.com>"]
edition = "2018"
description = "Amateur Data Interchange Format parsing and generation tools for Rust"
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/ewpratten/adif-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = "1.6"
regex = "1"
lexical = "5.2"
time = { version = "0.3.30", features = ["formatting", "macros", "parsing"] }
once_cell = "1.18.0"
